--- a/src/assets/scss/styles/top-bar.scss
+++ b/src/assets/scss/styles/top-bar.scss
@@ -43,3 +43,43 @@
     }
  
 }
+
+
+.title-bar .menu-icon {
+    display: flex;
+    width: 75px;
+    justify-content: space-between;
+    align-items: center;
+    .menu-icon-container {
+        display: flex;
+        flex-flow: column;
+        justify-content: space-around;
+        width: 20px;
+        height: 20px;
+        span {
+            width: 100%;
+            height: 1px;
+            background-color: $dark;
+            transition: transform 300ms ease;
+        }
+       
+    }
+     &.hover {
+         
+         .menu-icon-container{
+             justify-content: center;
+             position: relative;
+                & span {
+                    position: absolute;
+                    top: 50%;
+                    
+                }
+                & span:first-child {
+                    transform: rotate(45deg) translateY(-50%);
+                }
+                &  span:last-child {
+                    transform: rotate(135deg);
+                }
+            }
+        }
+}
