fixes and englis versions for chants

--- a/src/assets/scss/styles/variables.scss
+++ b/src/assets/scss/styles/variables.scss
@@ -1,1 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Allura|Bellefair');
+$black: #2c221a;
+$white: #cacec4;
 $dark: #4c3b2d;
+
+p {
+    font-family: 'Bellefair';
+    font-size: 24px;
+    text-shadow: 2px 2px 2px rgba(#ddd, 0.5);
+}
