--- a/src/assets/scss/styles/archive.scss
+++ b/src/assets/scss/styles/archive.scss
@@ -3,7 +3,8 @@
     flex-flow: row wrap;
     justify-content: space-between;
     width: 100%;
-    margin-top: 66px;
+    margin:0;
+    margin-top: 45px;
 }
 
 .jt-card {
@@ -24,12 +25,15 @@
         margin-bottom: 20px;
         width: 100px;
         height: 100px;
-        overflow: hidden;
+        // overflow: hidden;
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
         opacity: 0.5;
         transition: all 400ms ease;
+        svg {
+            height: 100%;
+        }
          
     }
 
