--- a/src/assets/scss/styles/temp-front.scss
+++ b/src/assets/scss/styles/temp-front.scss
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Allura|Bellefair');
-$black: #2c221a;
-$white: #cacec4;
+
 html, body {
     overflow: auto;
 }
 body {
-  background: black;
+  background: $black;
   min-height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -25,8 +23,6 @@ body {
 button:active, button:focus {
     outline: none;
 }
-
-
 
 .main-wrap {
   margin-top:0;
