--- a/src/assets/scss/styles/thula.scss
+++ b/src/assets/scss/styles/thula.scss
@@ -4,9 +4,14 @@
     flex-flow: column;
     article {
         // width: 90%;
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
         background-color: rgba(aliceblue, 0.5);
         border-radius: 5px;
-        padding: 25px 15px;
+        padding: 25px 15px 100px;
+        
         min-height: 70vh;
 
         h1 {
@@ -16,14 +21,14 @@
 
         .thulaImgContainer {
             margin: 0 auto 20px;
-            width: 200px;
-            height: 200px;
-            // overflow: hidden;
-            background-size: 40%;
-            background-repeat: no-repeat;
-            background-position: center;
+            width: 150px;
+            height: 150px;
+            display: flex;
+            justify-content: center;
             transition: all 400ms ease;
+            margin-bottom: 100px; 
             svg {
+                height: 100%;
                 filter: drop-shadow( 0 0 0 $dark );
                 transition: filter 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
                 g {
@@ -31,13 +36,14 @@
                     transition: fill 400ms cubic-bezier(0.645, 0.045, 0.355, 1);
                 }
             }
-            &:hover {
-                svg {
-                    filter: drop-shadow( 5px 5px 5px rgba($dark, 0.4));
-                    g {
-                        fill: lighten($dark, 10%);
-                    }
-                }
+        }
+        .chants-container {
+            display: flex;
+            justify-content: space-evenly;
+            width: 100%;
+            h1, h2, h3 {
+                font-family: 'Bellefair';
+                font-size: 28px;
             }
         }
     }
