--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:         FoundationPress
+Theme Name:         Seiðlæti 2.0.1
 Theme URI:          http://foundationpress.olefredrik.com
 Github Theme URI:   https://github.com/olefredrik/FoundationPress
 Description:        FoundationPress is a WordPress starter theme based on Foundation 6 by Zurb
